--- a/data/style.css
+++ b/data/style.css
@@ -1,24 +1,36 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+:root {
+    --background: #f3f8ff;
+    --secColor: #abafbe;
+}
+
 body {
-    padding-top: 8px;
-    background: #ececec;
+    padding-top: 16px;
+    background: var(--background);
     font-family: Calibri;
     text-align: center;
     justify-content: center;
     align-items: center;
     display: flex;
+    font-size: 16px;
+    color: #fff;
+    font-family: 'Poppins', sans-serif;
+
 }
 
 .wrap {
-    background: #ccc;
-    padding: 8px;
-    border-radius: 8px;
+    background: var(--secColor);
+    padding: 16px;
+    border-radius: 24px;
 }
 
 .colorSelector {
     padding: 8px;
-    border-radius: 8px;
+    border-radius: 24px;
     align-self: center;
-    background: #ccc;
+    background: var(--secColor);
+    border-color: var(--secColor);
 }
 
 .line {
@@ -37,25 +49,25 @@ body {
 
 .status {
     padding: 4px;
-    border-radius: 8px;
+    border-radius: 24px;
     /* align-self: center; */
-    background: #ccc;
+    background: var(--secColor);
 }
 
 .slidecontainer {
     padding: 8px;
-    border-radius: 8px;
+    border-radius: 24px;
     /* align-self: center; */
-    background: #ccc;
+    background: var(--secColor);
 }
-
 .slider {
     /* align-self: center; */
+    margin: 4px 0px 8px 0px;
     -webkit-appearance: none;
     width: 95%;
     height: 44px;
     border-radius: 24px;
-    background: #ddd;
+    background: #d5d6d8;
     outline: none;
     opacity: 1;
     border-style: solid;
@@ -63,6 +75,10 @@ body {
     border-width: 2px;
     /* -webkit-transition: .2s; */
     /* transition: opacity .2s; */
+}
+
+.dot {
+    margin-bottom: -2px;
 }
 
 
@@ -77,7 +93,7 @@ body {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background: #555;
+    background: var(--secColor);
     cursor: pointer;
     border-style: solid;
     border-color: #fff;
@@ -89,9 +105,14 @@ body {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background: #555;
+    background: var(--secColor);
     cursor: pointer;
     border-style: solid;
     border-color: #fff;
     border-width: 2px;
+}
+
+#githubIcon {
+    width: 20px;
+    margin: 16px;
 }
